Disappearing Dropdown-Menu on mobile is now FIXED!

--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ body {
     width: 100%;
     transition: .3s ease all;
     max-height: 0;
-    display: inline-flex;
     overflow: hidden;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)!important;
 }
